// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expect console.warn to fire—depending on process.env.NODE_ENV value it should warn exactly one time when value !== production 1`] = `
Array [
  "downshift: An object was passed to the default implementation of \`itemToString\`. You should probably provide your own \`itemToString\` implementation. Please refer to the \`itemToString\` API documentation.",
  "The object that was passed:",
  Object {
    "label": "test",
    "value": "any",
  },
]
`;

exports[`warns when controlled component becomes uncontrolled 1`] = `
Array [
  Array [
    "downshift: A component has changed the controlled prop \\"selectedItem\\" to be uncontrolled. This prop should not switch from controlled to uncontrolled (or vice versa). Decide between using a controlled or uncontrolled Downshift element for the lifetime of the component. More info: https://github.com/downshift-js/downshift#control-props",
  ],
]
`;

exports[`warns when uncontrolled component becomes controlled 1`] = `
Array [
  Array [
    "downshift: A component has changed the uncontrolled prop \\"selectedItem\\" to be controlled. This prop should not switch from controlled to uncontrolled (or vice versa). Decide between using a controlled or uncontrolled Downshift element for the lifetime of the component. More info: https://github.com/downshift-js/downshift#control-props",
  ],
]
`;
